@@ -20,7 +20,7 @@ sdl_viewer_CPPFLAGS = \
         -I$(top_builddir)/src/libopenvrml-gl \
         -I$(top_srcdir)/src/libopenvrml-gl
 sdl_viewer_CXXFLAGS = $(SDL_CFLAGS)
-sdl_viewer_LDFLAGS = $(SDL_LIBS) $(JNI_LIBS) $(GLU_LIBS)
+sdl_viewer_LDFLAGS = $(SDL_LIBS) $(GLU_LIBS)
 sdl_viewer_LDADD = $(top_builddir)/src/libopenvrml-gl/libopenvrml-gl.la
 
 pretty_print_SOURCES = pretty_print.cpp
